--- a/client/TODO
+++ b/client/TODO
@@ -1,3 +1,8 @@
-- form submit data
++ form submit data
+- calendar set to state
+- default values selected - use enum or const strings?
+- build list from vo array
+- validate input
+
 - on enter move to next not filled filed
 - date picker
