--- a/client/TODO
+++ b/client/TODO
@@ -1,5 +1,7 @@
+- acc and category through props
 - save transactions
 - transactions history
+
 
 + second server for transactions data
 + display account balance ( ${selected account} balance: 1000;
