--- a/client/TODO
+++ b/client/TODO
@@ -1,17 +1,17 @@
-- issue with history tab - load all on main tab - then switch to history tab
-- load data for selected date "+?year=2020&month=04"
-
-+ load first 10 transaction, then if needed 10 more etc
 History:
-
-- show only 5
-- pages - or upload when scrolling
+- on main page - show latest
+- on history page - show year month drop down and current month transactions
+- load data for selected date "+?year=2020&month=04"
 
 Edit popup:
 - enabel save only if smth was changed
 
 - handling server errors ( when didn't get response - how to update balance)
 
++ load first 10 transaction, then if needed 10 more etc
++ show only 5
++ pages - or upload when scrolling
++ issue with history tab - load all on main tab - then switch to history tab
 + edit transaction
 + handling server operation - block when deleting or editing
 + remove money from balance when adding transaction
