dividing history to latest and by date

--- a/client/TODO
+++ b/client/TODO
@@ -1,4 +1,5 @@
 History:
+- divide history latest and history month component?
 - on main page - show latest
 - on history page - show year month drop down and current month transactions
 - load data for selected date "+?year=2020&month=04"
