--- a/client/TODO
+++ b/client/TODO
@@ -1,6 +1,6 @@
 Transfer transaction
-    - disable if same accounts
     - red input - reset on typing, not only on clicking save
+    + disable if same accounts
     + to account switch differently
 
 
