expense tab exclude different transaction types

--- a/client/TODO
+++ b/client/TODO
@@ -1,3 +1,6 @@
+-remove transactions from expensies
+- income Category wri=ong ( card < - Food )
+
 Transfer transaction
     - edit transaction
     + save transaction
