fixed deleting accounts issue

--- a/client/TODO
+++ b/client/TODO
@@ -1,3 +1,8 @@
+issues:
+- add transsaaaction, change aaccount - see balance issue (101 99)
+
+
+
 Change name ref to name id
     - inoutData for and editing transactions
 
