changing names to nameId

--- a/client/TODO
+++ b/client/TODO
@@ -1,5 +1,6 @@
-issues:
-- add transsaaaction, change aaccount - see balance issue (101 99)
+Transfer transaction edit issues
+Check income transaction
+
 
 
 
