prepare to edit names

--- a/client/TODO
+++ b/client/TODO
@@ -1,11 +1,5 @@
-Transfer transaction edit issues
-Check income transaction
-
-
-
-
 Change name ref to name id
-    - inoutData for and editing transactions
+    - inputData for and editing transactions
 
 Settings tab
     - list all accounts
