adding new category

--- a/client/TODO
+++ b/client/TODO
@@ -1,5 +1,5 @@
 - add account
-    - delete income transaction to new acc issue
+    - delete income transaction to new acc issue? not reproduced
 - add category
 
 
