--- a/client/TODO
+++ b/client/TODO
@@ -1,6 +1,7 @@
 - add account
     - delete income transaction to new acc issue? not reproduced
 - add category
+- fix warning in input field
 
 
 refactor serverApi ( remove duplications)
