--- a/client/TODO
+++ b/client/TODO
@@ -1,6 +1,8 @@
 - add account
     - delete income transaction to new acc issue? not reproduced
 - add category
+    - edit color
+    - color picker
 - fix warning in input field
 
 
